<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:padding="@dimen/main_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:visibility="gone"
        android:id="@+id/sv_message"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/fl_main"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </FrameLayout>

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/button_order"
            android:id="@+id/btn_reg_finger"
            android:text="@string/register" />

        <Button
            style="@style/button_order"
            android:id="@+id/btn_search_finger"
            android:text="@string/verify" />

        <Button
            style="@style/button_order"
            android:id="@+id/btn_user_manage"
            android:text="@string/user_manage" />

    </LinearLayout>


</LinearLayout>
