<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="3dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_username"
                android:hint="@string/username"
                android:background="@null"
                android:enabled="false"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:gravity="center"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_usercode"
                android:hint="Usercode"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <GridLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/gl_fingers"
            android:columnCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/button_finger"
                android:text="Finger 1"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 2"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 3"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 4"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 5"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 6"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 7"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 8"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 9"/>

            <Button
                style="@style/button_finger"
                android:text="Finger 10"/>

        </GridLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:id="@+id/btn_modify"
                android:background="@drawable/white_btn_bg"
                android:textColor="@color/orange_dark"
                android:text="@string/modify"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_delete"
                android:background="@drawable/white_btn_bg"
                android:textColor="@color/light_red2"
                android:text="@string/delete"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <Button
                android:visibility="gone"
                android:id="@+id/btn_confirm"
                android:background="@drawable/blue_btn_bg"
                android:textColor="@color/white"
                android:text="@string/confirm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <View
                android:background="@color/gray_light"
                android:layout_width="1px"
                android:layout_height="match_parent"/>

            <Button
                android:visibility="gone"
                android:id="@+id/btn_cancel"
                android:background="@drawable/blue_btn_bg"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>