<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/register"
        android:textColor="@color/blue_band_light"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <EditText
        android:id="@+id/et_username"
        android:hint="Username"
        android:background="@null"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <EditText
        android:id="@+id/et_usercode"
        android:hint="Please enter 8-digit numbers"
        android:maxLength="8"
        android:textSize="16sp"
        android:inputType="number"
        android:background="@null"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <GridLayout
        android:id="@+id/gl_fingers"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/button_finger"
            android:text="Finger 1"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 2"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 3"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 4"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 5"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 6"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 7"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 8"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 9"/>

        <Button
            style="@style/button_finger"
            android:text="Finger 10"/>

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_confirm"
            android:background="@drawable/blue_btn_bg"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <View
            android:background="@color/gray_light"
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_cancel"
            android:background="@drawable/blue_btn_bg"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />

    </LinearLayout>


</LinearLayout>

