<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/tv_userId"
                android:hint="ID"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <View
                android:background="@color/gray_light"
                android:layout_width="1px"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/et_username"
                android:hint="Username"
                android:background="@null"
                android:enabled="false"
                android:gravity="center"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <View
            android:background="@color/gray_light"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <TextView
            android:id="@+id/tv_finger_count"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <View
            android:background="@color/gray_light"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <GridLayout
            android:id="@+id/gl_fingers"
            android:columnCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 1"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 2"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 3"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 4"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 5"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 6"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 7"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 8"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 9"/>

            <Button
                android:textColor="@color/dark"
                android:background="@drawable/white_btn_bg"
                android:layout_columnWeight="1"
                android:text="Finger 10"/>

        </GridLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:id="@+id/btn_modify"
                android:background="@drawable/orange_btn_bg"
                android:textColor="@color/white"
                android:text="@string/modify"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <View
                android:background="@color/gray_light"
                android:layout_width="1px"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_delete"
                android:background="@drawable/red_btn_bg"
                android:textColor="@color/white"
                android:text="@string/delete"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <Button
                android:visibility="gone"
                android:id="@+id/btn_confirm"
                android:background="@drawable/blue_btn_bg"
                android:textColor="@color/white"
                android:text="@string/confirm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <View
                android:background="@color/gray_light"
                android:layout_width="1px"
                android:layout_height="match_parent"/>

            <Button
                android:visibility="gone"
                android:id="@+id/btn_cancel"
                android:background="@drawable/blue_btn_bg"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>